modules/gdscript/tests/scripts/runtime/errors/typed_array_pass_differently_to_typed.gd
func expect_typed(typed: Array[int]):
	print(typed.size())

func test():
	var differently: Variant = [1.0] as Array[float]
	expect_typed(differently)
	print('not ok')
